[package]
name = "rustrogue"
version = "0.0.1"
authors = ["Alexandre Severino <alexandre.a.severino@gmail.com>"]
edition = "2024"

[dependencies]
macroquad = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pathfinding = "4.3"
once_cell = "1.21.3"
bitflags = "2.4"
mlua = { version = "0.9", features = ["luajit", "vendored"] }
futures = "0.3.31"
